# volplane

./: .gitignore  README.md  ROADMAP.md  index.html  justfile  package.json  tsconfig.json
.github/workflows/: ci.yml
scripts/: coverage.test.ts  coverage.ts  dev-server.ts  nmea-sim.ts
src/: data-packages.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/core/: airspace.test.ts  airspace.ts  alarmtone.test.ts  alarmtone.ts  analysis.test.ts  analysis.ts  automc.test.ts  automc.ts  ballast.test.ts  ballast.ts  battery.test.ts  battery.ts  briefing.test.ts  briefing.ts  cachebudget.ts  catalogue.test.ts  catalogue.ts  circleassist.test.ts  circleassist.ts  circling.test.ts  circling.ts  compute.test.ts  compute.ts  config.test.ts  config.ts  cup.test.ts  cup.ts  device.ts  finesse.test.ts  finesse.ts  flarm.test.ts  flarm.ts  gesture.test.ts  gesture.ts  glide.test.ts  glide.ts  goto.test.ts  goto.ts  hillshade.test.ts  hillshade.ts  (+63 more)
src/shell/: alerts-ui.test.ts  alerts-ui.ts  app.css  audio.test.ts  audio.ts  briefing-ui.test.ts  briefing-ui.ts  capabilities.test.ts  flyframe-ui.test.ts  flyframe-ui.ts  goto-ui.test.ts  goto-ui.ts  igcjournal.test.ts  igcjournal.ts  infobox-ui.test.ts  infobox-ui.ts  landables-ui.test.ts  landables-ui.ts  liftmap-ui.test.ts  liftmap-ui.ts  main.ts  map-ui.test.ts  map-ui.ts  maprotate.test.ts  maprotate.ts  packstore.test.ts  packstore.ts  provision.test.ts  provision.ts  repository-ui.test.ts  repository-ui.ts  rose-ui.test.ts  store.ts  (+13 more)
